# ecomon

./: .editorconfig  .env-default  .gitignore  README.md  batch_import.py  bind-database.sh  birdid-2.docker-compose.yaml  birdid-cpu.docker-compose.yaml  birdid-europe-254_index_to_name.json  birdid.docker-compose.yaml  birdid.mfn0470.docker-compose.yaml  birdnet-2.docker-compose.yaml  birdnet-multi.docker-compose.yaml  birdnet-public-3k-v2.2_index_to_name_dog2019.json  birdnet-single.docker-compose.yaml  config-BRITZ01.yaml  config.yaml  create_birnet_compose.py  docker-compose.birdid.mfn0470.yaml  docker-compose.birdid.yaml  docker-compose.birdnet-5.yaml  docker-compose.birdnet-multi.yaml  docker-compose.birdnet.yaml  docker-compose.dev.yaml  docker-compose.model.yaml  docker-compose.production.yaml  docker-compose.yaml  env-default  fix_naming.py  package-lock.json  package.json  production_env_default  report-notes.md  schema.graphql  testloading.py
backend/: .dockerignore  Dockerfile  Dockerfile.api  Dockerfile.worker  README.md  app.py  cloud-upload.py  create_index.py  create_sample.py  create_species_index.py  db.py  dev-api.sh  dev-worker.sh  dev.sh  docker-compose.dev.yaml  entrypoint.api.sh  entrypoint.worker.sh  env-default  import_records.py  logger.py  pyproject.toml  requirements.txt  run.dev.sh  run.prod.sh  run.release.sh  test_ffmpeg.py
backend/assets/: olaf8_id.json
backend/config/: config-BIRDNET_BRITZ01-2019.yaml  config-BIRDNET_BRITZ01-2020.yaml  config-BIRDNET_BRITZ01-2021.yaml  config-BIRDNET_BRITZ01-2022.yaml  config-BIRDNET_WALLBERGE-2018.yaml  (+24 more)
(+554 files in other folders)
